--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,18 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+
+    {% for l, messages in app.flashes %}
+        {% for m in messages %}
+            <div class="ui inline nag {{ l }}" style="display: block">
+                    <span class="title">
+                        {{ m }}
+                    </span>
+                {#                    <i class="close icon"></i>#}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
