UPD Mail validation et resetPassw

--- a/templates/security/resetpassword.html.twig
+++ b/templates/security/resetpassword.html.twig
@@ -38,12 +38,8 @@
                         {{ form_row(passwordForm.plainPassword) }}
                     </div>
                     <br/>
-                    <button type="submit" class="ui inverted green button huge">Oui</button>
+                    <button type="submit" class="ui inverted green button huge">Confirmer</button>
                 {{ form_end(passwordForm) }}
-
-                <br>
-                <a href="{{ path('lostpassword') }}">Mot de passe perdu</a><br>
-                <a href="{{ path('register') }}">Créer un compte</a>
 
             </div>
         </div>
