--- a/templates/home/pages/home.html.twig
+++ b/templates/home/pages/home.html.twig
@@ -1,5 +1,7 @@
 {% extends 'home/base.html.twig' %}
 
+{% block title %}Accueil{% endblock %}
+
 {% block body %}
 
 <div class="pusher">
@@ -8,7 +10,7 @@
         {% include 'home/includes/inbody-menu.html.twig' %}
 
         <div class="ui text container">
-            <h1 class="ui inverted header">Quest Titre</h1>
+            <h1 class="ui inverted header">One Quest</h1>
 {#            <h2>Do whatever you want when you want to.</h2>#}
 {#            <div class="ui huge primary button">#}
 {#            <div class="ui massive primary icon circular button">#}
@@ -50,8 +52,8 @@
         <div class="ui equal width stackable internally celled grid">
             <div class="center aligned row">
                 <div class="column">
-                    <h3>Créez une quête</h3>
-                    <p>Transformez les tâches ménagères de vos enfants en quête de jeu vidéo</p>
+                    <h3>Le principe</h3>
+                    <p><b>Gamification</b> : Transformez les corvées de vos enfants en quêtes de jeu vidéo</p>
                 </div>
                 <div class="column">
                     <h3>Contrôlez la quête</h3>
