--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,6 +9,8 @@
     </style>
 {% endblock stylesheets %}
 
+{% block title %}Connexion{% endblock %}
+
 {% block body %}
 
     <div class="pusher">
