--- a/templates/home/base.html.twig
+++ b/templates/home/base.html.twig
@@ -8,9 +8,9 @@
         <meta name="keywords" content="Semantic-UI, Theme, Design, Template" />
         <meta name="author" content="PPType" />
         <meta name="theme-color" content="#ffffff" />
-        <title>Accueil - NOMSITE</title>
+{#        <title></title>#}
         <link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"  type="text/css"  />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %} - One Quest</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('home.css', 'cst_css') }}" />
         {% endblock %}
