Add sitemap & legale mentions

--- a/templates/home/includes/home-footer.html.twig
+++ b/templates/home/includes/home-footer.html.twig
@@ -6,8 +6,8 @@
             <div class="three wide column">
                 <h4 class="ui inverted header">À propos</h4>
                 <div class="ui inverted link list">
-                    <a class="item" href="#root">Mentions légales</a>
-                    <a class="item" href="#root">Sitemap</a>
+                    <a class="item" href="{{ path('mentions_legales') }}">Mentions légales</a>
+                    <a class="item" href="{{ path('sitemap') }}">Sitemap</a>
 {#                    <a class="item" href="#root">Religious Ceremonies</a>#}
 {#                    <a class="item" href="#root">Gazebo Plans</a>#}
                 </div>
