--- a/templates/home/pages/home.html.twig
+++ b/templates/home/pages/home.html.twig
@@ -2,21 +2,22 @@
 
 {% block title %}Accueil{% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    <script src="{{ asset('assets/js/cookies.js') }}"></script>
+{% endblock %}
+
 {% block body %}
 
-<div class="pusher">
+<div class="pusher" xmlns:display="http://www.w3.org/1999/xhtml">
     <div class="ui inverted vertical masthead center aligned segment" id="header-div">
 
         {% include 'home/includes/inbody-menu.html.twig' %}
 
         <div class="ui text container">
             <h1 class="ui inverted header">One Quest</h1>
-{#            <h2>Do whatever you want when you want to.</h2>#}
-{#            <div class="ui huge primary button">#}
-{#            <div class="ui massive primary icon circular button">#}
-{#                 <i class="right book icon"></i>#}
-
-{#            </div>#}
             
             <a href="{{ path('ouvrir-journal') }}" id="quest-book-btn" class="ui circular inverted button" title="Ouvrir mon journal de quêtes">
                 <img src="{{ asset('book_icon.PNG', 'home_img') }}" alt="Image livre">
@@ -65,29 +66,14 @@
             </div>
         </div>
     </div>
-{#    <div class="ui vertical stripe segment">#}
-{#        <div class="ui text container">#}
-{#            <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>#}
-{#            <p>#}
-{#                Instead of focusing on content creation and hard work, we have#}
-{#                learned how to master the art of doing nothing by providing massive#}
-{#                amounts of whitespace and generic content that can seem massive,#}
-{#                monolithic and worth your attention.#}
-{#            </p>#}
-{#            <a class="ui large button">Read More</a>#}
-{#            <h4 class="ui horizontal header divider">#}
-{#                <a href="#root"> Case Studies</a>#}
-{#            </h4>#}
-{#            <h3 class="ui header">Did We Tell You About Our Bananas?</h3>#}
-{#            <p>#}
-{#                Yes I know you probably disregarded the earlier boasts as#}
-{#                non-sequitur filler content, but its really true. It took years of#}
-{#                gene splicing and combinatory DNA research, but our bananas can#}
-{#                really dance.#}
-{#            </p>#}
-{#            <a class="ui large button">I'm Still Quite Interested</a>#}
-{#        </div>#}
-{#    </div>#}
+</div>
+
+{#  Bandeau cookie  #}
+<div class="ui inline cookie nag" style="position: fixed; top: 0">
+      <span class="title">
+          En continuant de naviguer sur ce site, vous acceptez l'utilisation des cookie
+      </span>
+    <button onclick="acceptCookies()">Ok</button>
 </div>
 
 {% endblock body %}
@@ -107,13 +93,6 @@
             font-size: 6em !important;
             margin-top: 0.5em !important;
             margin-bottom: 0.5em !important;
-        }
-
-        #header-div {
-            {#background-image: url({{ asset('com_fire_cave.png', 'home_img') }});#}
-            /*background-size: cover;*/
-            /*background-repeat: no-repeat;*/
-            /*background-position: center top;*/
         }
 
         #quest-book-btn {
