Correction faute orthographe

--- a/templates/home/pages/home.html.twig
+++ b/templates/home/pages/home.html.twig
@@ -71,7 +71,7 @@
 {#  Bandeau cookie  #}
 <div class="ui inline cookie nag" style="position: fixed; top: 0">
       <span class="title">
-          En continuant de naviguer sur ce site, vous acceptez l'utilisation des cookie
+          En continuant de naviguer sur ce site, vous acceptez l'utilisation des cookies
       </span>
     <button onclick="acceptCookies()">Ok</button>
 </div>
