Update mentions legales

--- a/templates/home/pages/legale_mentions.html.twig
+++ b/templates/home/pages/legale_mentions.html.twig
@@ -55,6 +55,8 @@
 
         <p>
             Lucas Barnéoud-Arnaud est propriétaire des droits de propriété intellectuelle ou détient les droits d’usage sur tous les éléments accessibles sur le site, notamment les textes, images, graphismes, logo, icônes, sons, logiciels.
+            <br/>
+            Crédit images Fantasy and Role-play : <a href="https://www.iconfinder.com/Chanut-is" target="_blank">Chanut is industries</a>
             <br/><br/>
             Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des éléments du site, quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation écrite préalable de : Lucas Barnéoud-Arnaud.
             <br/><br/>
