--- a/templates/home/pages/legale_mentions.html.twig
+++ b/templates/home/pages/legale_mentions.html.twig
@@ -54,7 +54,7 @@
         <h3>5. Propriété intellectuelle et contrefaçons.</h3>
 
         <p>
-            Lucas Barnéoud-Arnaud est propriétaire des droits de propriété intellectuelle ou détient les droits d’usage sur tous les éléments accessibles sur le site, notamment les textes, images, graphismes, logo, icônes, sons, logiciels.
+            Lucas Barnéoud-Arnaud est propriétaire des droits de propriété intellectuelle ou détient les droits d’usage sur tous les éléments accessibles sur le site, notamment les textes, graphismes.
             <br/>
             Crédit images Fantasy and Role-play : <a href="https://www.iconfinder.com/Chanut-is" target="_blank">Chanut is industries</a>
             <br/><br/>
