--- a/templates/parent-dashboard/base.html.twig
+++ b/templates/parent-dashboard/base.html.twig
@@ -276,7 +276,7 @@ desired effect
             Nom site
         </div>
         <!-- Default to the left -->
-        <strong>Copyright &copy; 2019 <a href="#">Nom Site</a>.</strong>
+        <strong>Copyright &copy; 2019 <a href="#">One Quest</a>.</strong>
     </footer>
 
     <!-- Control Sidebar -->
