Title connexion enfant, Del footer dashoard parent

--- a/templates/parent-dashboard/base.html.twig
+++ b/templates/parent-dashboard/base.html.twig
@@ -270,14 +270,10 @@ desired effect
     <!-- /.content-wrapper -->
 
     <!-- Main Footer -->
-    <footer class="main-footer">
-        <!-- To the right -->
-        <div class="pull-right hidden-xs">
-            Nom site
-        </div>
+{#    <footer class="main-footer">#}
         <!-- Default to the left -->
-        <strong>Copyright &copy; 2019 <a href="#">One Quest</a>.</strong>
-    </footer>
+{#        <strong>Copyright &copy; 2019 <a href="#">One Quest</a>.</strong>#}
+{#    </footer>#}
 
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
