--- a/templates/security/childLogin.html.twig
+++ b/templates/security/childLogin.html.twig
@@ -1,5 +1,7 @@
 {% extends 'home/base.html.twig' %}
 
+{% block title %}Ouvrir le journal{% endblock %}
+
 {% block stylesheets %}
     {{ parent() }}
     <style>
