Correction faute orthographe

--- a/templates/parent-dashboard/pages/quests.html.twig
+++ b/templates/parent-dashboard/pages/quests.html.twig
@@ -107,7 +107,7 @@
                             <h2>Créer une nouvelle quête</h2>
 
                             {% if user.children is empty %}
-                                Pour créer un nouvelle quête, vous devez posséder au moins 1 <a href="{{ path('dashboard-add-child') }}">compte enfant</a>.
+                                Pour créer une nouvelle quête, vous devez posséder au moins 1 <a href="{{ path('dashboard-add-child') }}">compte enfant</a>.
                             {% else %}
                                 <div class="box box-success">
                                     <div class="box-body">
