--- a/templates/home/includes/home-footer.html.twig
+++ b/templates/home/includes/home-footer.html.twig
@@ -6,8 +6,6 @@
                 <div class="ui inverted link list">
                     <a class="item" href="{{ path('mentions_legales') }}">Mentions légales</a>
                     <a class="item" href="{{ path('sitemap') }}">Sitemap</a>
-{#                    <a class="item" href="#root">Religious Ceremonies</a>#}
-{#                    <a class="item" href="#root">Gazebo Plans</a>#}
                 </div>
             </div>
             <div class="three wide column">
@@ -15,8 +13,7 @@
                 <div class="ui inverted link list">
                     <a class="item" href="{{ path('register') }}">Inscription</a>
                     <a class="item" href="{{ path('login') }}">Connexion Parent</a>
-                    <a class="item" href="#root">Connexion Enfant</a>
-{#                    <a class="item" href="#root">Favorite X-Men</a>#}
+                    <a class="item" href="{{ path('ouvrir-journal') }}">Connexion Enfant</a>
                 </div>
             </div>
 
