--- a/templates/security/accessdenied.html.twig
+++ b/templates/security/accessdenied.html.twig
@@ -26,7 +26,7 @@
                 </div>
                 <br/>
                 <br/>
-                <a type="submit" class="ui  green button huge" href="{{ path('accessdenied', { 'resendEmailValidation': 1 }) }}">Envoyer un nouvel e-mail de confirmation</a>
+                <a type="submit" class="ui  green button huge" href="{{ path('accessdenied', { 'r': 1 }) }}">Envoyer un nouvel e-mail de confirmation</a>
 
                 <br/>
                 <br>
