--- a/templates/parent-dashboard/base.html.twig
+++ b/templates/parent-dashboard/base.html.twig
@@ -161,6 +161,12 @@ desired effect
                     <li>
                         <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
                     </li>
+                    <li>
+                        <a href="{{ path('home') }}" ><i class="fa fa-home"></i></a>
+                    </li>
+                    <li>
+                        <a href="{{ path("logout") }}" ><i class="fa fa-sign-out"></i></a>
+                    </li>
                 </ul>
             </div>
         </nav>
