--- a/templates/parent-dashboard/pages/one-child.html.twig
+++ b/templates/parent-dashboard/pages/one-child.html.twig
@@ -71,7 +71,7 @@
                                             <span class="quest-status {{ questStatus.colorclass }}"><i class="{{ questStatus.icon }}"></i></span>
 
                                             <span class="username">
-                                              <a href="#">{{ q.title }}</a>
+                                              {{ q.title }}
                                             </span>
                                             <span class="description">{{ q.description }}</span>
                                         </div>
