[OK] Alertes journal custom, scrollbar cahchées, Nb récompenses dispo

--- a/public/assets/quest-book/css/main.css
+++ b/public/assets/quest-book/css/main.css
@@ -67,6 +67,11 @@ div.wide.six {
     /*max-height: 1000px;*/
 }
 
+/* Cache la barre de scroll */
+div.wide.six::-webkit-scrollbar {
+    display: none;
+}
+
 div.left-margin {
     height: 100%;
 }
