--- a/templates/child-dashboard/base.html.twig
+++ b/templates/child-dashboard/base.html.twig
@@ -17,6 +17,9 @@
                 crossorigin="anonymous">
 
         </script>
+
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
         {% block javascripts %}
         {% endblock %}
     </head>
