[Fix] Liens e-mail de validation

--- a/templates/parent-dashboard/pages/quests.html.twig
+++ b/templates/parent-dashboard/pages/quests.html.twig
@@ -113,7 +113,7 @@
                             {% endif %}
                             {% if not questToValidExists %}
                                 Aucune quête à afficher <br>
-                                <a onclick="swapToAddQuest()">Créer une nouvelle quête</a>
+                                <a href="#" onclick="swapToAddQuest()">Créer une nouvelle quête</a>
                             {% endif %}
                         </div>
                         <!-- /.quetes en cours -->
