--- a/templates/security/validation-email.html.twig
+++ b/templates/security/validation-email.html.twig
@@ -438,7 +438,7 @@
                                     <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 15px; padding-bottom: 10px; font-family: Arial, sans-serif"><![endif]-->
                                     <div style="color:#555555;font-family:Arial, 'Helvetica Neue', Helvetica, sans-serif;line-height:150%;padding-top:15px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
                                         <div style="line-height: 18px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 12px; color: #555555;">
-                                            <p style="line-height: 25px; text-align: left; font-size: 12px; margin: 0;"><span style="font-size: 17px; mso-ansi-font-size: 18px;">Cliquez sur ce lien pour valider votre adresse e-mail : {{ link }}</span></p>
+                                            <p style="line-height: 25px; text-align: left; font-size: 12px; margin: 0;"><span style="font-size: 17px; mso-ansi-font-size: 18px;">Cliquez sur ce lien pour valider votre adresse e-mail : <a href="{{ link }}" style="text-decoration: underline; color: #66BECD;" target="_blank">{{ link }}</a></span></p>
                                         </div>
                                     </div>
                                     <!--[if mso]></td></tr></table><![endif]-->
@@ -486,7 +486,7 @@
                                     <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px; font-family: Arial, sans-serif"><![endif]-->
                                     <div style="color:#555555;font-family:Arial, 'Helvetica Neue', Helvetica, sans-serif;line-height:120%;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
                                         <div style="font-size: 12px; line-height: 14px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; color: #555555;">
-                                            <p style="font-size: 14px; line-height: 16px; text-align: left; margin: 0;"><a href="ephilosia.ddns.net" rel="noopener" style="text-decoration: underline; color: #66BECD;" target="_blank">One Quest</a></p>
+                                            <p style="font-size: 14px; line-height: 16px; text-align: left; margin: 0;"><a href="http://ephilosia.ddns.net/" style="text-decoration: underline; color: #66BECD;" target="_blank">One Quest</a></p>
                                         </div>
                                     </div>
                                     <!--[if mso]></td></tr></table><![endif]-->
